spacing fix

--- a/css/university-of-alberta-minecraft-club.webflow.css
+++ b/css/university-of-alberta-minecraft-club.webflow.css
@@ -1195,7 +1195,7 @@
 }
 
 .mobile-margin-top-12 {
-  margin-left: -11px;
+  margin-left: -14px;
 }
 
 .wiki-button {
